--- a/LessTextOutline/LessTextOutline.csproj
+++ b/LessTextOutline/LessTextOutline.csproj
@@ -70,10 +70,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Menu\SliderBlue.cs" />
+    <Compile Include="Menu\SliderGreen.cs" />
+    <Compile Include="Menu\SliderRed.cs" />
     <Compile Include="ModEntry.cs" />
     <Compile Include="Preferences.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ToggleDisableOutline.cs" />
+    <Compile Include="Menu\ToggleCustomOutline.cs" />
+    <Compile Include="Menu\ToggleDisableOutline.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
