--- a/MoreTextOutlines/MoreTextOutlines.csproj
+++ b/MoreTextOutlines/MoreTextOutlines.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{96477869-FD40-4899-A606-E5AC7CCF0F5A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LessTextOutline</RootNamespace>
-    <AssemblyName>LessTextOutline</AssemblyName>
+    <RootNamespace>MoreTextOutlines</RootNamespace>
+    <AssemblyName>MoreTextOutlines</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
