Add scuffed support for coloured dialog

--- a/MoreTextOptions/MoreTextOptions.csproj
+++ b/MoreTextOptions/MoreTextOptions.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Menu\SliderTextRed.cs" />
     <Compile Include="Menu\ToggleCustomText.cs" />
     <Compile Include="ModEntry.cs" />
+    <Compile Include="Patching\SayLine.cs" />
     <Compile Include="Patching\SpriteBatch.cs" />
     <Compile Include="Patching\TextHelper.cs" />
     <Compile Include="Preferences.cs" />
